made changes to relative, absolute and fixed css.

--- a/css-positioning/absolute.css
+++ b/css-positioning/absolute.css
@@ -17,8 +17,7 @@
   /* top: 20px;
   left: 245px; */
   top: 1rem;
-  right: -12rem;
-  width: 250px;
+  right: 1rem;
 }
 
 .joke {
@@ -30,7 +29,7 @@
   -webkit-text-stroke: 1px black;
   text-transform: uppercase;
   position: absolute;
-  top: 166px;
+  bottom: 0;
   left: 0;
   width: 300px;
 }
