--- a/css-two-column-layout/styles.css
+++ b/css-two-column-layout/styles.css
@@ -29,7 +29,8 @@ body {
 }
 
 .column-one-half {
-  /* flex-wrap: wrap; */
+  position: relative;
+  left: 30px;
   flex-basis: calc(100% / 2);
   padding: 25px 50px 0;
 }
@@ -78,4 +79,5 @@ body {
   text-align: center;
   margin-right: 75px;
   margin-bottom: 50px;
+}
 }
