--- a/css-canvas-medical/styles.css
+++ b/css-canvas-medical/styles.css
@@ -22,9 +22,21 @@ h6 {
 li {
   font-family: "Avenir", sans-serif;
   list-style-type: none;
+  font-size: 14px;
 }
 
 p,
 h6 {
   font-family: "Avenir", sans-serif;
+  font-size: 12px;
+}
+
+button {
+  color: whitesmoke;
+  text-decoration: none;
+  background-color: rgb(0, 52, 121);
+  display: inline;
+  border-radius: 3px;
+  border: none;
+  padding: 10px 25px;
 }
