--- a/css-two-column-layout/styles.css
+++ b/css-two-column-layout/styles.css
@@ -38,16 +38,16 @@ body {
 .image {
   width: 95px;
   position: relative;
-  right: 6rem;
-  top: 1rem;
+  right: 6em;
+  top: 1em;
 }
 
 .column-header {
   font-size: 11px;
   position: relative;
-  right: 5.1rem;
-  bottom: 4rem;
-  margin-left: 85px;
+  text-align: center;
+  bottom: 65px;
+  margin-right: 115px;
   letter-spacing: 1px;
 }
 
@@ -55,9 +55,9 @@ body {
   font-size: 12px;
   color: gray;
   position: relative;
-  right: 4.2rem;
-  bottom: 4rem;
-  margin-left: 70px;
+  text-align: center;
+  bottom: 65px;
+  margin-right: 115px;
   line-height: 18px;
 }
 
@@ -79,5 +79,4 @@ body {
   text-align: center;
   margin-right: 75px;
   margin-bottom: 50px;
-}
 }
